Added sample application to list names of Star Wars characters

--- a/webui/index.html
+++ b/webui/index.html
@@ -1,5 +1,20 @@
 <html>
-<div>
-    Hello, World!
+<head>
+    <link rel="stylesheet" href="font/stylesheet.css" type="text/css" charset="utf-8" />
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <script type="text/javascript" src="nanoajax.min.js"></script>
+    <script type="text/javascript" src="app.js"></script>
+</head>
+<body>
+<div class="header">
+    <img src="logo.png"/>
+    <span>Characters</span>
 </div>
+<div id="characters">
+    <div class="loading">
+        <img width=80 height=80 src="loading.gif">
+        <span>Loading...</span>
+    </div>
+</div>
+</body>
 </html>
