--- a/webui/index.html
+++ b/webui/index.html
@@ -2,8 +2,7 @@
 <head>
     <link rel="stylesheet" href="font/stylesheet.css" type="text/css" charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <script type="text/javascript" src="nanoajax.min.js"></script>
-    <script type="text/javascript" src="app.js"></script>
+    <script type="text/javascript" src="dist/bundle.js"></script>
 </head>
 <body>
 <div class="header">
