state after FEWG of Mar 22nd

--- a/webui/index.html
+++ b/webui/index.html
@@ -2,8 +2,6 @@
 <head>
     <link rel="stylesheet" href="font/stylesheet.css" type="text/css" charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <script type="text/javascript" src="nanoajax.min.js"></script>
-    <script type="text/javascript" src="app.js"></script>
 </head>
 <body>
 <div class="header">
@@ -11,10 +9,8 @@
     <span>Characters</span>
 </div>
 <div id="characters">
-    <div class="loading">
-        <img width=80 height=80 src="loading.gif">
-        <span>Loading...</span>
-    </div>
+
 </div>
+<script type="text/javascript" src="dist/bundle.js"></script>
 </body>
 </html>
