Shaf/Waz/Markus: get DevServer working by using WebpackHtmlPlugin to generate appropriate index.html during build

--- a/webui/static/index.html
+++ b/webui/static/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <link rel="stylesheet" href="font/stylesheet.css" type="text/css" charset="utf-8" />
+    <link rel="stylesheet" href="../font/stylesheet.css" type="text/css" charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
@@ -11,6 +11,5 @@
 <div id="characters">
 
 </div>
-<script type="text/javascript" src="dist/bundle.js"></script>
 </body>
 </html>
